[gd_scene load_steps=6 format=3 uid="uid://ybujgwijd2jx"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_nxqcx"]
[ext_resource type="Texture2D" uid="uid://kgthan744wmi" path="res://assets/restart.png" id="2_vt5p6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xokmq"]
texture = ExtResource("2_vt5p6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0lq6j"]
texture = ExtResource("2_vt5p6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cn4vs"]
texture = ExtResource("2_vt5p6")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_nxqcx")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Score:
0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -31.5
offset_right = 80.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_xokmq")
theme_override_styles/hover = SubResource("StyleBoxTexture_0lq6j")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cn4vs")

[node name="StartMessage" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -267.0
offset_right = 280.0
offset_bottom = -198.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Click anywhere to start"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
